--- a/tabbed.ui
+++ b/tabbed.ui
@@ -333,7 +333,7 @@
               <item row="0" column="0">
                <widget class="QLabel" name="titleLabel">
                 <property name="text">
-                 <string>Title</string>
+                 <string>Title (INAM)</string>
                 </property>
                </widget>
               </item>
@@ -349,7 +349,7 @@
             <item>
              <widget class="QLabel" name="creationDateLabel">
               <property name="text">
-               <string>Creation Date</string>
+               <string>Creation Date (ICRD)</string>
               </property>
              </widget>
             </item>
@@ -368,7 +368,7 @@
               <item row="0" column="0">
                <widget class="QLabel" name="commentLabel">
                 <property name="text">
-                 <string>Comment</string>
+                 <string>Comment (ICMT)</string>
                 </property>
                </widget>
               </item>
@@ -387,7 +387,7 @@
             <item row="0" column="0">
              <widget class="QLabel" name="sourceLabel">
               <property name="text">
-               <string>Source</string>
+               <string>Source (ISRC)</string>
               </property>
              </widget>
             </item>
@@ -414,7 +414,7 @@
             <item row="0" column="0">
              <widget class="QLabel" name="technicianLabel">
               <property name="text">
-               <string>Technician</string>
+               <string>Technician (ITCH)</string>
               </property>
              </widget>
             </item>
@@ -470,7 +470,7 @@
               <item row="0" column="0">
                <widget class="QLabel" name="copyrightLabel">
                 <property name="text">
-                 <string>Copyright</string>
+                 <string>Copyright (ICOP)</string>
                 </property>
                </widget>
               </item>
@@ -516,324 +516,117 @@
        <attribute name="title">
         <string>XMP</string>
        </attribute>
-       <widget class="QWidget" name="layoutWidget_9">
+       <widget class="QWidget" name="">
         <property name="geometry">
          <rect>
-          <x>5</x>
-          <y>12</y>
-          <width>258</width>
-          <height>245</height>
+          <x>21</x>
+          <y>21</y>
+          <width>971</width>
+          <height>198</height>
          </rect>
         </property>
-        <layout class="QVBoxLayout" name="verticalLayout_2">
-         <item>
-          <widget class="QLabel" name="label_3">
-           <property name="text">
-            <string>Description:</string>
-           </property>
-          </widget>
-         </item>
-         <item>
-          <widget class="QListWidget" name="description_list"/>
-         </item>
-         <item>
-          <layout class="QHBoxLayout" name="horizontalLayout_8">
-           <item>
-            <spacer name="horizontalSpacer">
-             <property name="orientation">
-              <enum>Qt::Horizontal</enum>
-             </property>
-             <property name="sizeHint" stdset="0">
-              <size>
-               <width>40</width>
-               <height>20</height>
-              </size>
-             </property>
-            </spacer>
-           </item>
-           <item>
-            <widget class="QToolButton" name="description_addbutton">
-             <property name="text">
-              <string>Add</string>
-             </property>
-            </widget>
-           </item>
-           <item>
-            <widget class="QToolButton" name="description_removebutton">
-             <property name="enabled">
-              <bool>false</bool>
-             </property>
-             <property name="text">
-              <string>Remove</string>
-             </property>
-            </widget>
-           </item>
-          </layout>
-         </item>
-        </layout>
-       </widget>
-       <widget class="QWidget" name="layoutWidget_10">
-        <property name="geometry">
-         <rect>
-          <x>293</x>
-          <y>11</y>
-          <width>258</width>
-          <height>246</height>
-         </rect>
-        </property>
-        <layout class="QVBoxLayout" name="verticalLayout_5">
-         <item>
-          <widget class="QLabel" name="label_8">
-           <property name="text">
-            <string>Language:</string>
-           </property>
-          </widget>
-         </item>
-         <item>
-          <widget class="QListWidget" name="language_list"/>
-         </item>
+        <layout class="QHBoxLayout" name="horizontalLayout_10">
          <item>
           <layout class="QHBoxLayout" name="horizontalLayout_12">
            <item>
-            <widget class="QComboBox" name="language_choice"/>
-           </item>
-           <item>
-            <widget class="QToolButton" name="language_addbutton">
-             <property name="text">
-              <string>Add</string>
+            <layout class="QFormLayout" name="formLayout_15">
+             <property name="fieldGrowthPolicy">
+              <enum>QFormLayout::ExpandingFieldsGrow</enum>
              </property>
-            </widget>
-           </item>
-           <item>
-            <widget class="QToolButton" name="language_removebutton">
-             <property name="enabled">
-              <bool>false</bool>
-             </property>
-             <property name="text">
-              <string>Remove</string>
-             </property>
-            </widget>
+             <item row="0" column="0">
+              <widget class="QLabel" name="commentLabel_2">
+               <property name="text">
+                <string>Description</string>
+               </property>
+              </widget>
+             </item>
+             <item row="0" column="1">
+              <widget class="QPlainTextEdit" name="descriptionText"/>
+             </item>
+            </layout>
            </item>
           </layout>
          </item>
-        </layout>
-       </widget>
-       <widget class="QWidget" name="layoutWidget_11">
-        <property name="geometry">
-         <rect>
-          <x>575</x>
-          <y>11</y>
-          <width>258</width>
-          <height>245</height>
-         </rect>
-        </property>
-        <layout class="QVBoxLayout" name="verticalLayout_14">
          <item>
-          <widget class="QLabel" name="label_14">
-           <property name="text">
-            <string>Rights Summary:</string>
-           </property>
-          </widget>
-         </item>
-         <item>
-          <widget class="QListWidget" name="rights_list"/>
-         </item>
-         <item>
-          <layout class="QHBoxLayout" name="horizontalLayout_13">
+          <layout class="QVBoxLayout" name="verticalLayout_2">
            <item>
-            <widget class="QToolButton" name="rights_addbutton">
-             <property name="text">
-              <string>Add</string>
-             </property>
-            </widget>
+            <layout class="QHBoxLayout" name="horizontalLayout_8">
+             <item>
+              <widget class="QLabel" name="creationDateLabel_2">
+               <property name="text">
+                <string>Language</string>
+               </property>
+              </widget>
+             </item>
+             <item>
+              <widget class="QLineEdit" name="languageLine"/>
+             </item>
+            </layout>
            </item>
            <item>
-            <widget class="QToolButton" name="rights_removebutton">
-             <property name="enabled">
-              <bool>false</bool>
+            <layout class="QFormLayout" name="formLayout_18">
+             <property name="fieldGrowthPolicy">
+              <enum>QFormLayout::ExpandingFieldsGrow</enum>
              </property>
-             <property name="text">
-              <string>Remove</string>
-             </property>
-            </widget>
+             <item row="0" column="0">
+              <widget class="QLabel" name="sourceLabel_2">
+               <property name="text">
+                <string>Copyright holder</string>
+               </property>
+              </widget>
+             </item>
+             <item row="0" column="1">
+              <widget class="QComboBox" name="rightsOwnerSelect">
+               <property name="sizePolicy">
+                <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
+                 <horstretch>0</horstretch>
+                 <verstretch>0</verstretch>
+                </sizepolicy>
+               </property>
+               <property name="editable">
+                <bool>true</bool>
+               </property>
+              </widget>
+             </item>
+            </layout>
            </item>
            <item>
-            <spacer name="horizontalSpacer_11">
+            <layout class="QHBoxLayout" name="horizontalLayout_13">
+             <item>
+              <widget class="QLabel" name="creationDateLabel_4">
+               <property name="text">
+                <string>Interviewer</string>
+               </property>
+              </widget>
+             </item>
+             <item>
+              <widget class="QLineEdit" name="interviewerLine"/>
+             </item>
+            </layout>
+           </item>
+           <item>
+            <layout class="QHBoxLayout" name="horizontalLayout_14">
+             <item>
+              <widget class="QLabel" name="creationDateLabel_5">
+               <property name="text">
+                <string>Interviewee</string>
+               </property>
+              </widget>
+             </item>
+             <item>
+              <widget class="QLineEdit" name="intervieweeLine"/>
+             </item>
+            </layout>
+           </item>
+           <item>
+            <spacer name="verticalSpacer_3">
              <property name="orientation">
-              <enum>Qt::Horizontal</enum>
+              <enum>Qt::Vertical</enum>
              </property>
              <property name="sizeHint" stdset="0">
               <size>
-               <width>40</width>
-               <height>20</height>
-              </size>
-             </property>
-            </spacer>
-           </item>
-          </layout>
-         </item>
-        </layout>
-       </widget>
-       <widget class="QWidget" name="layoutWidget_12">
-        <property name="geometry">
-         <rect>
-          <x>10</x>
-          <y>287</y>
-          <width>258</width>
-          <height>245</height>
-         </rect>
-        </property>
-        <layout class="QVBoxLayout" name="verticalLayout_7">
-         <item>
-          <widget class="QLabel" name="label_9">
-           <property name="text">
-            <string>Creator:</string>
-           </property>
-          </widget>
-         </item>
-         <item>
-          <widget class="QListWidget" name="creator_list"/>
-         </item>
-         <item>
-          <layout class="QHBoxLayout" name="horizontalLayout_14">
-           <item>
-            <widget class="QToolButton" name="creator_addbutton">
-             <property name="text">
-              <string>Add</string>
-             </property>
-            </widget>
-           </item>
-           <item>
-            <widget class="QToolButton" name="creator_removebutton">
-             <property name="enabled">
-              <bool>false</bool>
-             </property>
-             <property name="text">
-              <string>Remove</string>
-             </property>
-            </widget>
-           </item>
-           <item>
-            <spacer name="horizontalSpacer_9">
-             <property name="orientation">
-              <enum>Qt::Horizontal</enum>
-             </property>
-             <property name="sizeHint" stdset="0">
-              <size>
-               <width>40</width>
-               <height>20</height>
-              </size>
-             </property>
-            </spacer>
-           </item>
-          </layout>
-         </item>
-        </layout>
-       </widget>
-       <widget class="QWidget" name="layoutWidget_13">
-        <property name="geometry">
-         <rect>
-          <x>298</x>
-          <y>289</y>
-          <width>258</width>
-          <height>245</height>
-         </rect>
-        </property>
-        <layout class="QVBoxLayout" name="verticalLayout_4">
-         <item>
-          <widget class="QLabel" name="label_6">
-           <property name="text">
-            <string>Contributor:</string>
-           </property>
-          </widget>
-         </item>
-         <item>
-          <widget class="QListWidget" name="contributor_list"/>
-         </item>
-         <item>
-          <layout class="QHBoxLayout" name="horizontalLayout_15">
-           <item>
-            <widget class="QToolButton" name="contributor_addbutton">
-             <property name="text">
-              <string>Add</string>
-             </property>
-            </widget>
-           </item>
-           <item>
-            <widget class="QToolButton" name="contributor_removebutton">
-             <property name="enabled">
-              <bool>false</bool>
-             </property>
-             <property name="text">
-              <string>Remove</string>
-             </property>
-            </widget>
-           </item>
-           <item>
-            <spacer name="horizontalSpacer_2">
-             <property name="orientation">
-              <enum>Qt::Horizontal</enum>
-             </property>
-             <property name="sizeHint" stdset="0">
-              <size>
-               <width>40</width>
-               <height>20</height>
-              </size>
-             </property>
-            </spacer>
-           </item>
-          </layout>
-         </item>
-        </layout>
-       </widget>
-       <widget class="QWidget" name="layoutWidget_14">
-        <property name="geometry">
-         <rect>
-          <x>584</x>
-          <y>289</y>
-          <width>258</width>
-          <height>245</height>
-         </rect>
-        </property>
-        <layout class="QVBoxLayout" name="verticalLayout_8">
-         <item>
-          <widget class="QLabel" name="label_11">
-           <property name="text">
-            <string>Publisher:</string>
-           </property>
-          </widget>
-         </item>
-         <item>
-          <widget class="QListWidget" name="publisher_list"/>
-         </item>
-         <item>
-          <layout class="QHBoxLayout" name="horizontalLayout_16">
-           <item>
-            <widget class="QToolButton" name="publisher_addbutton">
-             <property name="text">
-              <string>Add</string>
-             </property>
-            </widget>
-           </item>
-           <item>
-            <widget class="QToolButton" name="publisher_removebutton">
-             <property name="enabled">
-              <bool>false</bool>
-             </property>
-             <property name="text">
-              <string>Remove</string>
-             </property>
-            </widget>
-           </item>
-           <item>
-            <spacer name="horizontalSpacer_10">
-             <property name="orientation">
-              <enum>Qt::Horizontal</enum>
-             </property>
-             <property name="sizeHint" stdset="0">
-              <size>
-               <width>40</width>
-               <height>20</height>
+               <width>20</width>
+               <height>40</height>
               </size>
              </property>
             </spacer>
