--- a/tabbed.ui
+++ b/tabbed.ui
@@ -676,7 +676,7 @@
   </action>
   <action name="actionOpen_template">
    <property name="enabled">
-    <bool>false</bool>
+    <bool>true</bool>
    </property>
    <property name="text">
     <string>Open template...</string>
