Fix bug in textChanged slot hookup, and finish wiring-in of template switching

--- a/autoBWF/tabbed.ui
+++ b/autoBWF/tabbed.ui
@@ -52,7 +52,7 @@
                   </item>
                   <item>
                    <property name="text">
-                    <string>Target</string>
+                    <string>Original</string>
                    </property>
                   </item>
                   <item>
@@ -96,7 +96,7 @@
                     </item>
                     <item>
                      <property name="text">
-                      <string>Target</string>
+                      <string>Original</string>
                      </property>
                     </item>
                     <item>
@@ -132,7 +132,7 @@
                     </item>
                     <item>
                      <property name="text">
-                      <string>Target</string>
+                      <string>Original</string>
                      </property>
                     </item>
                     <item>
@@ -171,7 +171,7 @@
                     </item>
                     <item>
                      <property name="text">
-                      <string>Target</string>
+                      <string>Original</string>
                      </property>
                     </item>
                     <item>
@@ -207,7 +207,7 @@
                     </item>
                     <item>
                      <property name="text">
-                      <string>Target</string>
+                      <string>Original</string>
                      </property>
                     </item>
                     <item>
@@ -265,7 +265,7 @@
                         </item>
                         <item>
                          <property name="text">
-                          <string>Target</string>
+                          <string>Original</string>
                          </property>
                         </item>
                         <item>
@@ -482,7 +482,7 @@
                       </item>
                       <item>
                        <property name="text">
-                        <string>Target</string>
+                        <string>Original</string>
                        </property>
                       </item>
                       <item>
@@ -515,7 +515,7 @@
                       </item>
                       <item>
                        <property name="text">
-                        <string>Target</string>
+                        <string>Original</string>
                        </property>
                       </item>
                       <item>
@@ -558,7 +558,7 @@
                       </item>
                       <item>
                        <property name="text">
-                        <string>Target</string>
+                        <string>Original</string>
                        </property>
                       </item>
                       <item>
@@ -601,7 +601,7 @@
                       </item>
                       <item>
                        <property name="text">
-                        <string>Target</string>
+                        <string>Original</string>
                        </property>
                       </item>
                       <item>
@@ -644,7 +644,7 @@
                       </item>
                       <item>
                        <property name="text">
-                        <string>Target</string>
+                        <string>Original</string>
                        </property>
                       </item>
                       <item>
@@ -683,7 +683,7 @@
                         </item>
                         <item>
                          <property name="text">
-                          <string>Target</string>
+                          <string>Original</string>
                          </property>
                         </item>
                         <item>
@@ -754,7 +754,7 @@
                     </item>
                     <item>
                      <property name="text">
-                      <string>Target</string>
+                      <string>Original</string>
                      </property>
                     </item>
                     <item>
@@ -815,7 +815,7 @@
                     </item>
                     <item>
                      <property name="text">
-                      <string>Target</string>
+                      <string>Original</string>
                      </property>
                     </item>
                     <item>
@@ -858,7 +858,7 @@
                     </item>
                     <item>
                      <property name="text">
-                      <string>Target</string>
+                      <string>Original</string>
                      </property>
                     </item>
                     <item>
@@ -891,7 +891,7 @@
                     </item>
                     <item>
                      <property name="text">
-                      <string>Target</string>
+                      <string>Original</string>
                      </property>
                     </item>
                     <item>
@@ -924,7 +924,7 @@
                     </item>
                     <item>
                      <property name="text">
-                      <string>Target</string>
+                      <string>Original</string>
                      </property>
                     </item>
                     <item>
@@ -976,7 +976,7 @@
                       </item>
                       <item>
                        <property name="text">
-                        <string>Target</string>
+                        <string>Original</string>
                        </property>
                       </item>
                       <item>
